manifests/vaultwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vaultwarden
spec:
  serviceName: vault
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vaultwarden
      containers:
        - name: vault
          image: vaultwarden/server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: vault-data
              mountPath: /data
      volumes:
      - name: vault-data
        persistentVolumeClaim:
          claimName: vault
