manifests/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vaultwarden
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: vault
